--- a/config/server.properties
+++ b/config/server.properties
@@ -24,7 +24,7 @@ hide-online-players=false
 initial-disabled-packs=
 initial-enabled-packs=vanilla
 level-name=world
-level-seed=1727502807
+level-seed=
 level-type=default
 max-build-height=256
 max-chained-neighbor-updates=1000000
