nova versao que constroi a imagem do zero e utiliz o zero tier como vpn

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,17 +1,18 @@
-version: '3.1'
+version: '3.9'
 services:
-    forgeserver:
-        container_name: forgeserver
-        deploy:
-            resources:
-                limits:
-                    cpus: '0.5'
-                    memory: 6144M
-        build:
-          context: .
-          dockerfile: Dockerfile
-        ports:
-          - 25565:25565
-        volumes:
-          - ./mods:/srv/forge/mods
+  mine_server:
+    build: .
+    ports:
+      - 25565:25565
+      - 9993:9993
+    cap_add:
+      - NET_ADMIN
+      - SYS_ADMIN
+    devices:
+      - /dev/net/tun:/dev/net/tun
+    volumes:
+      - ./mods:/srv/minecraft/mods
+      - ./world:/srv/minecraft/world
+    stdin_open: true  # Mantém o STDIN aberto para interação, útil para debugging
+    tty: true  # Aloca um terminal pseudo-TTY, útil para interação
 
